@@ -17,13 +17,14 @@ import javax.sound.sampled.AudioFormat;
 
 
 /**
- * Test class for the ByteIntConverter. Will test all audioformats used by the javasound jjack impl.
+ * Test class for the Source and Target datalines. Will test all audioformats used by the javasound jjack impl, and verify
+ * that a full throughput of data results in the same values in the other end.
  * 
  * @author Peter Johan Salomonsen
  *
  */
-class ByteIntConverterTest {
-	public static void main(String[] args)
+class LineTests {
+	public static void main(String[] args) throws Exception
 	{
 		
 		AudioFormat[] audioFormats = new AudioFormat[8];
@@ -36,10 +37,17 @@ class ByteIntConverterTest {
 		{
 			AudioFormat fmt = audioFormats[fmIndex];
 			System.out.println(fmt);
+
+			SourceJJackLine src = new SourceJJackLine();
+			src.open(fmt);
+			
+			TargetJJackLine tgt = new TargetJJackLine();
+			tgt.open(fmt);
+
 			ByteIntConverter conv = new ByteIntConverter(fmt.getSampleSizeInBits()/8,fmt.isBigEndian(),
 					fmt.getEncoding() == AudioFormat.Encoding.PCM_SIGNED ? true : false
 					);
-			 
+
 			final int numValues = 8;
 			int byteArrLen = numValues*fmt.getSampleSizeInBits()/8;
 			byte[] b = new byte[byteArrLen];
@@ -47,10 +55,21 @@ class ByteIntConverterTest {
 			{
 				long val = ((n / (fmt.getSampleSizeInBits()/8) ) * (1l<<fmt.getSampleSizeInBits()) / numValues) - (1l<<fmt.getSampleSizeInBits() -1);
 				System.out.print(val);
+			
 				conv.writeInt(b, n, (int)val);
-				System.out.print(" ");
+				
+				src.write(b, n, conv.bytesPerSample);
+				System.out.print(", ");
+				
+				float flVal = src.readFloat(1)[0];
+				tgt.getFloatBuffer(1)[0] = flVal;
+				tgt.writeFloatBuffer();
+				System.out.print(" float Value "+flVal+" ");
+			
+				tgt.read(b, n, conv.bytesPerSample);
 				
 				long ret = conv.readInt(b, n);
+				
 				System.out.println(ret+" "+(ret==val));
 			}
 		}
